--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,7 +42,5 @@ li:not(:last-child) {
 }
 
 body {
-    background-color: var(--ctp-macchiato-base);
-    background-size: cover;
-    background-attachment: fixed;  
+    background-color: #c0c0c0;
 }
